--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <artifactId>addons-parent-pom</artifactId>
     <groupId>org.exoplatform.addons</groupId>
-    <version>9-RC01</version>
+    <version>10-M01</version>
   </parent>
   
   <groupId>org.exoplatform.addons.data-collector</groupId>
@@ -56,11 +56,10 @@
     <!-- **************************************** -->
     <!-- Dependencies versions                    -->
     <!-- **************************************** -->
-    <org.exoplatform.depmgt.version>13</org.exoplatform.depmgt.version>
-    <org.exoplatform.platform.version>5.1.0-RC12</org.exoplatform.platform.version>
+    <org.exoplatform.depmgt.version>15-M05</org.exoplatform.depmgt.version>
+    <org.exoplatform.platform.version>5.2.0-M05</org.exoplatform.platform.version>
     <!-- for tests -->
     <junit.version>4.12</junit.version>
-    
     <mockito.version>2.0.13-beta</mockito.version>
   </properties>
   
