Complete merge (rename from Data Collector) and licenses with formatting

--- a/packaging/pom.xml
+++ b/packaging/pom.xml
@@ -19,33 +19,35 @@
     02110-1301 USA, or see the FSF site: http://www.fsf.org.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.exoplatform.addons.data-collector</groupId>
-    <artifactId>data-collector</artifactId>
+    <artifactId>smart-activity-stream</artifactId>
+    <groupId>org.exoplatform.addons.smart-activity-stream</groupId>
     <version>1.0.x-SNAPSHOT</version>
   </parent>
-  
-  <artifactId>data-collector-packaging</artifactId>
+
+  <artifactId>smart-activity-stream-packaging</artifactId>
   <packaging>pom</packaging>
-  <name>eXo Data Collector :: Packaging</name>
-  <description>eXo Data Collector portal extension packaging</description>
-  
+  <name>eXo Smart Activity Stream :: Packaging</name>
+  <description>eXo Smart Activity Stream portal extension packaging</description>
+
   <dependencies>
     <dependency>
-      <groupId>org.exoplatform.addons.data-collector</groupId>
-      <artifactId>data-collector-services</artifactId>
+      <groupId>org.exoplatform.addons.smart-activity-stream</groupId>
+      <artifactId>smart-activity-stream-services</artifactId>
+      <type>jar</type>
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>org.exoplatform.addons.data-collector</groupId>
-      <artifactId>data-collector-webapp</artifactId>
+      <groupId>org.exoplatform.addons.smart-activity-stream</groupId>
+      <artifactId>smart-activity-stream-webapp</artifactId>
       <type>war</type>
       <scope>provided</scope>
     </dependency>
   </dependencies>
-  
+
   <build>
     <resources>
       <resource>
@@ -58,7 +60,7 @@
         </includes>
       </resource>
     </resources>
-    <finalName>datacollector</finalName>
+    <finalName>smart-activity-stream</finalName>
     <plugins>
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
