Rename to simpler smartactivity app name; improve WebUI rendering & labels

--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -104,6 +104,6 @@
         </includes>
       </resource>
     </resources>
-    <finalName>smart-activity-stream</finalName>
+    <finalName>smartactivity</finalName>
   </build>
 </project>
