Refactoring to clearly separate stats and relevancy services; cleanup of stats API; stats saving 2 steps aggregating (cached and persisted batches); added likes count hover/click tracker

--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
   <parent>
     <artifactId>addons-parent-pom</artifactId>
     <groupId>org.exoplatform.addons</groupId>
-    <version>10</version>
+    <version>12-M01</version>
   </parent>
 
   <groupId>org.exoplatform.addons.smart-activity-stream</groupId>
@@ -57,8 +57,8 @@
     <!-- **************************************** -->
     <!-- Dependencies versions                    -->
     <!-- **************************************** -->
-    <org.exoplatform.depmgt.version>16-M16</org.exoplatform.depmgt.version>
-    <org.exoplatform.platform.version>5.3.0-M16</org.exoplatform.platform.version>
+    <org.exoplatform.depmgt.version>17.0-M04</org.exoplatform.depmgt.version>
+    <org.exoplatform.platform.version>6.0.0-M04</org.exoplatform.platform.version>
     <!-- for tests -->
     <junit.version>4.12</junit.version>
     <mockito.version>2.0.13-beta</mockito.version>
