--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -80,6 +80,11 @@
       <artifactId>commons-api</artifactId>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>jstl</artifactId>
+      <version>1.2</version>
+    </dependency>
   </dependencies>
   <build>
     <resources>
